Works. Can define sobdomains with yaml.

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,6 @@
 [Proxy1]
 host = 127.0.0.1
-httpport = 8000
-httpsport = 44301
-
-[Proxy2]
-host = 127.0.0.1
 httpport = 8080
-httpsport = 44302
+httpsport = 44301
+mapping = proxy1.yaml
+
